# mplug

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: autotile.lua  focus-history.lua  notifications.lua  output-hotplug.lua  powersave.lua  urgent-follow.lua
personal/: audio-switcher.lua  brightness-controller.lua  clock-calendar.lua  media-dashboard.lua  media-renderer.py  mplug.toml  power-menu.lua  radar.lua  screenshot.lua  system-metrics.lua  volume-controller.lua  workspace-listener.lua
src/: config.rs  event.rs  logging.rs  lua.rs  main.rs  mango_ipc.rs  manifest.rs  socket.rs  wayland.rs
